# VideoTranscriber

./: .gitignore  Cargo.toml  README.md
cıktı/: transkript_20260430_203033.json  transkript_20260430_203323.json  transkript_20260430_203323.srt  transkript_20260430_203323.vtt
src/: main.rs
