[package]
name = "mp4_transkript_masaustu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
eframe = "0.27"
egui = "0.27"
hound = "3.5"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
